# rules-diversity

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: exploration.ipynb
rules/: __init__.py  bootstrap.py  cache.py  config.py  eval.py  ga.py  logging_setup.py  motifs.py  motifs_explainer.py  ops.py  runtime.py  spectrum.py  stage1_exact.py  structures.py  symcanon.py  symmetry.py  utils_io.py  viz.py
scripts/: __init__.py  rd_cli.py  run_ga.py  run_ga_batch.py  run_pipeline.py  run_stage1.py
tests/: test_archetype_cache.py  test_bootstrap.py  test_boundary_modes.py  test_motifs_local.py  test_objective_modes.py  test_pipeline.py  test_resume.py  test_symmetry_modes.py  test_viz.py
