[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-diversity"
version = "0.1.0"
description = "Rule-set search for maximal pattern diversity on torus grids (exact+approx, GA, bounds)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Mr.Narrenschiff" }]
license = { text = "MIT" }
dependencies = [
  "matplotlib>=3.7",
  "networkx>=3.2",
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "torch>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rules", "rules.*"]

[project.scripts]
rules-run-ga = "scripts.rd.cli:main"
rules-stage1 = "scripts.rd.cli:main"
